<resources>
    <string name="app_name">FeedingTracker</string>
    <string name="startFeeding">Start Feeding</string>
    <string name="Overview">View History</string>
    <string name="Milkplan">Milkplan</string>
    <string name="welcomeText">Welcome</string>
    <string name="welcomeTextMain">This is your feeding time helper</string>
    <string name="SignInButton">Sign In</string>
    <string name="Breast_radiobutton">Breast</string>
    <string name="breast">breast</string>
    <string name="FeedingByBottleIntro">Feeding by bottle</string>
    <string name="Bottle_radiobutton">bottle</string>
    <string name="bottle">bottle</string>
    <string name="TotalText">"Total amount of milk today: "</string>
    <string name="overviewInfo">This is a weekly overview that shows your childs meals this week</string>
    <string name="numberofbreast">Number of times you have breastfed this week</string>
    <string name="overviewInfoText">Your child\'s meals this week</string>
    <string name="offeredBreast">"Offered breast today: "</string>
    <string name="OfferedBottleText">Offered bottle today: </string>
    <string name="WelcomeNameMenu_txtv">Welcome</string>
    <string name="InfoMenu_txtv"> Hope you are having a good day. To start a feeding press the feeding image. To see previews feeding data press the chart image</string>
    <string name="feedingTrackerText">Feeding Tracker</string>
    <string name="chooseTypeText">Choose how you are going to feed</string>
    <string name="LoginText">Login</string>
    <string name="EmailText">Email Address</string>
    <string name="PasswordText">Password</string>
    <string name="ForgotText">Forgot password?</string>
    <string name="RegisterText">Register</string>
    <string name="RegisterPageText">Register page</string>
    <string name="FullNameText">Full name</string>
    <string name="MailText">Email</string>
    <string name="RegisterUserText">Register user</string>
    <string name="InsertMilkText">Please input how much milk is filled in baby bottle:</string>
    <string name="Milk">Milk in ml</string>
    <string name="SaveText">Save</string>
    <string name="FeedingBreastText">Feeding by breast</string>
    <string name="WaitText">Please wait for data</string>
    <string name="DoneText">Done</string>
    <string name="DataRecievedPressDone">Data received. You can press done to save and return</string>
</resources>